# SysYc

./: .gdb_history  .gitignore  .gitmodules  1526.s  1725.s  Cargo.toml  LICENSE  README.md  a.out  cmmc  dbg.txt  error.llvm  h --set-upstream origin backend  mat0618.s  o0.llvm  o1.llvm  out.asm  out.txt  output.txt  output2.txt  params.txt  rust-toolchain.toml  rustc-ice-2024-03-15T07_39_44-7651.txt  rustc-ice-2024-03-15T07_40_30-7870.txt  rustc-ice-2024-03-15T12_27_21-5423.txt  rustc-ice-2024-03-15T12_31_59-7684.txt  rustc-ice-2024-03-15T12_32_36-8589.txt  rustfmt.toml  temp.sh  test  test.S  test.bash  test.c  test.cpp  test.exec  test.ll  test.llvm  test.py  test.s  test.txt  (+5 more)
.github/workflows/: clippy.yml  functional_test.yml  lint.yml  performance_test.yml  test.yml
attr/: Cargo.toml
attr/src/: lib.rs
backend/: README.md
backend/basicblock/: Cargo.toml
backend/cfg/: Cargo.toml
backend/constants/: Cargo.toml
backend/emission/: Cargo.toml
backend/func/: Cargo.toml
backend/instruction/: Cargo.toml
backend/irparser/: Cargo.toml
backend/optimizer/: Cargo.toml
backend/post_optimizer/: Cargo.toml
backend/pre_optimizer/: Cargo.toml
backend/program/: Cargo.toml
backend/register/: Cargo.toml  README.md
backend/riscv/: Cargo.toml
backend/selection_dag/: Cargo.toml
backend/transform/: Cargo.toml
frontend/: README.md
frontend/ast/: Cargo.toml
frontend/ast/src/: impls.rs  lib.rs  tree.rs  visitor.rs
frontend/attr/: Cargo.toml
frontend/ir_gen/: Cargo.toml
frontend/ir_gen/src/: lib.rs  llvm_gen.rs  llvmirgen.rs
frontend/ir_type/: Cargo.toml
frontend/irgen/: Cargo.toml
frontend/irgen/src/: counter.rs  impls.rs  initlist_state.rs  irgen copy.rs  irgen.rs  lib.rs  loop_state.rs  symbol_table.rs  utils.rs  visitor.rs
frontend/namer/: Cargo.toml  namer_vistor.rs
frontend/namer/src/: complie_calculate.rs  lib.rs  namer.rs  utils.rs  utils_namer.rs  visitor.rs
frontend/scope/: Cargo.toml
middleend/: Cargo.toml
optimizer/: Cargo.toml  README.md
optimizer/ast_optimizer/: Cargo.toml
optimizer/src/: impls.rs  indvar.rs  lib.rs  loopinfo.rs  metadata.rs  number.rs
optimizer/src/alloc_hoisting/: README.md  impls.rs  mod.rs
optimizer/src/arith/: compute_graph.rs  impls.rs  mod.rs
optimizer/src/array_global/: impls.rs  mod.rs
optimizer/src/calc_coef/: ast.rs  impls.rs  mod.rs  utils.rs
optimizer/src/code_hoisting/: README.md  impls.rs  mod.rs
optimizer/src/dead_code/: impls.rs  mod.rs
optimizer/src/fold_constants/: impls.rs  mod.rs
optimizer/src/function_inline/: entry.rs  func_list.rs  impls.rs  mod.rs
optimizer/src/fuyuki_vn/: calc.rs  fvn_utils.rs  impl.rs  impl_down.rs  impl_fvn.rs  impl_gvn.rs  impl_lvn.rs  impl_up.rs  mod.rs  stack_hashmap.rs  stack_table.rs  traverse.rs
optimizer/src/global_analysis/: README.md  func_data.rs  impls.rs  mod.rs  var_data.rs
optimizer/src/global_value_numbering/: README.md  impls.rs  mod.rs  number.rs  utils.rs  utls.rs
optimizer/src/if_combine/: README.md  impls.rs  mod.rs
optimizer/src/instruction_extension/: README.md  impls.rs  mod.rs
optimizer/src/local_expression_rearrangement/: impls.rs  mod.rs
optimizer/src/localize_variable/: impls.rs  mod.rs
optimizer/src/loop_parallel/: impls.rs  mod.rs
optimizer/src/loops/: chain_node.rs  constants.rs  display.rs  impls.rs  indvar.rs  indvar_type.rs  loop_data.rs  loop_optimizer.rs  loop_simplify.rs  loop_unroll.rs  loopinfo.rs  mod.rs  optype.rs  temp_graph.rs  utils.rs
optimizer/src/loops/add_value_to_cfg/: impls.rs  mod.rs
optimizer/src/loops/add_value_to_cfg/one_loop_solver/: classify_indvar.rs  helper_functions.rs  impls.rs  mod.rs
optimizer/src/loops/indvar_combine/: impls.rs  mod.rs
optimizer/src/loops/indvar_extraction/: impls.rs  mod.rs
optimizer/src/loops/indvar_extraction/one_loop_solver/: classify_indvar.rs  classify_usefulness.rs  get_loop_info.rs  helper_functions.rs  impls.rs  indvar_extraction.rs  mod.rs  strength_reduce.rs  utils.rs
optimizer/src/loops/indvar_optimize/: impls.rs  mod.rs
optimizer/src/loops/indvar_optimize/one_loop_solver/: compute_indvar.rs  get_loop_info.rs  helper_functions.rs  impls.rs  indvar_optimize.rs  mod.rs  tarjan_var.rs  utils.rs
optimizer/src/loops/indvar_solver/: compute_indvar.rs  get_loop_info.rs  helper_functions.rs  impls.rs  indvar_optimize.rs  mod.rs  move_invariant.rs
optimizer/src/loops/loop_simplify/: impls.rs  mod.rs
optimizer/src/loops/loop_unroll/: impls.rs  loop_unroll.rs  loop_unroll_impl.rs  mod.rs
optimizer/src/loops/para/: check_loop.rs  make_parallel.rs  mod.rs  pointer_tracer.rs
optimizer/src/mem2reg/: README.md  impls.rs  mod.rs  utils.rs
optimizer/src/partial_redundancy_elimination/: README.md
optimizer/src/pure_check/: impls.rs  mod.rs
optimizer/src/range_analysis/: addictive_synonym.rs  analysis_graph.rs  block_imply.rs  constrain.rs  constrain_graph.rs  impls.rs  mod.rs  range.rs  range_arith.rs  range_compare.rs  tarjan.rs  widen_operator.rs
optimizer/src/reorder_expr/: impls.rs  mod.rs
optimizer/src/simplify_compare/: addictive_synonym.rs  impls.rs  mod.rs
optimizer/src/stateless_cache/: impls.rs  mod.rs
optimizer/src/strength_reduce/: impls.rs  mod.rs
optimizer/src/strength_reduce/osr/: helper_functions.rs  impls.rs  lstf.rs  mod.rs
optimizer/src/tail_recursion/: impls.rs  mod.rs
optimizer/src/unreachable/: impls.rs  mod.rs
optimizer/src/useless_code/: impls.rs  mod.rs
optimizer/src/useless_phis/: impls.rs  mod.rs
optimizer/src/zero_init/: impls.rs  mod.rs
para/: mm.s  simple.s
runtime/: Makefile  sylib.cc  sylib.h
simulator/: Cargo.toml
src/: cli.rs  config.rs  logging.rs  main.rs  printer.rs
sysyc_derive/: Cargo.toml
tmp/: 114.c
utils/: Cargo.toml
utils/rrvm/: Cargo.toml
utils/rrvm/src/: basicblock.rs  cfg.rs  func.rs  impls.rs  lib.rs  prelude.rs  program.rs  range.rs
utils/rrvm/src/dominator/: dominator_frontier.rs  impls.rs  mod.rs  naive.rs
utils/rrvm/src/rrvm_loop/: find_loop.rs  loop_analysis.rs  mod.rs  utils.rs
utils/rrvm/src/rrvm_loop/loop_info/: get_loop_info.rs  mod.rs
(+157 files in other folders)
