[package]
name = "sysyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sysyc_derive",
  "utils",
  "utils/llvm",
  "utils/rrvm",
  "utils/instruction",
  "frontend/ast",
  "frontend/attr",
  "frontend/symbol",
  "frontend/irgen",
  "frontend/namer",
  "frontend/typer",
  "frontend/scope",
  "frontend/value",
  "frontend/parser",
  "backend/func",
  "backend/program",
  "optimizer/ast_optimizer",
]

[dependencies]
utils = { path = "utils" }
llvm = { path = "utils/llvm" }
instruction = { path = "utils/instruction" }

ast = { path = "frontend/ast" }
parser = { path = "frontend/parser" }
namer = { path = "frontend/namer" }
typer = { path = "frontend/typer" }

rrvm_func = { path = "backend/func" }
rrvm_program = { path = "backend/program" }

clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.75"

[features]
debug = []
