[package]
name = "sysyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sysyc_derive",
  "utils",
  "utils/llvm",
  "utils/rrvm",
  "utils/instruction",
  "frontend/ast",
  "frontend/attr",
  "frontend/symbol",
  "frontend/irgen",
  "frontend/namer",
  "frontend/typer",
  "frontend/scope",
  "frontend/value",
  "frontend/parser",
  "optimizer",
  "simulator",
  "backend/transform",
  "backend/register",
  "backend/emission",
  "backend/optimizer",
]

[dependencies]
utils = { path = "utils" }
llvm = { path = "utils/llvm" }
rrvm = { path = "utils/rrvm" }
instruction = { path = "utils/instruction" }

ast = { path = "frontend/ast" }
parser = { path = "frontend/parser" }
namer = { path = "frontend/namer" }
typer = { path = "frontend/typer" }
irgen = { path = "frontend/irgen" }

optimizer = { path = "optimizer" }

transform = { path = "backend/transform" }
register = { path = "backend/register" }
emission = { path = "backend/emission" }
backend_optimizer = { path = "backend/optimizer" }

simulator = { path = "simulator" }

clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.75"

[features]
simu = []
debug = []
default = ["debug"]
