[package]
name = "sysyc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sysyc_derive",
  "utils",
  "utils/llvm",
  "utils/rrvm",
  "utils/instruction",
  "frontend/ast",
  "frontend/attr",
  "frontend/symbol",
  "frontend/irgen",
  "frontend/namer",
  "frontend/typer",
  "frontend/scope",
  "frontend/value",
  "frontend/parser",
  "optimizer",
  "backend/transform",
  "backend/register",
  "backend/emission",
  "backend/post_optimizer",
  "backend/pre_optimizer",
]

[dependencies]
utils = { path = "utils" }
llvm = { path = "utils/llvm" }
rrvm = { path = "utils/rrvm" }
instruction = { path = "utils/instruction" }

ast = { path = "frontend/ast" }
parser = { path = "frontend/parser" }
namer = { path = "frontend/namer" }
typer = { path = "frontend/typer" }
irgen = { path = "frontend/irgen" }

optimizer = { path = "optimizer" }
pre_optimizer = { path="backend/pre_optimizer" }

transform = { path = "backend/transform" }
register = { path = "backend/register" }
emission = { path = "backend/emission" }
post_optimizer = { path = "backend/post_optimizer" }

clap = { version = "4.4.7", features = ["derive"] }
anyhow = "1.0.75"

[features]
debug = []
default = ["debug"]

[[bin]]
name = "compiler"
path = "src/main.rs"
