[package]
name = "optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.13.0"

utils = { path = "../utils" }
rrvm = { path = "../utils/rrvm" }
llvm = { path = "../utils/llvm" }