[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysyc_derive = { path = "../../sysyc_derive" }

utils = { path = "../../utils"}
rrvm = { path = "../../utils/rrvm" }

attr = { path = "../attr" }
value = { path = "../value" }
