[package]
name = "irgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm = { path="../../utils/llvm" }
attr = { path="../attr" }
ast = { path="../ast" }
utils = { path="../../utils" }
value = { path="../value" }
rrvm_symbol = { path="../symbol" }