[package]
name = "namer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scope = { path = "../scope" }
ast = {path = "../ast"}
utils = { path = "../../utils"}
ir_type = { path = "../ir_type" }
anyhow = "1.0.75"
attr = { path = "../../attr" }