[package]
name = "namer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../../utils"}

ast = { path = "../ast" }
attr = { path = "../attr" }
scope = { path = "../scope" }
value = { path = "../value" }
rrvm_symbol = { path = "../symbol" }