[package]
name = "rrvm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = ".." }
llvm = { path = "../llvm" }
instruction = { path = "../instruction" }

sysyc_derive = { path = "../../sysyc_derive" }

[features]
debug = []
